[package]
name = "advent-of-code-2019"
version = "0.1.0"
authors = ["Marcus Griep <marcus@griep.us>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
intcode = { path = "./intcode" }

[dev-dependencies]
criterion = "0.3"
env_logger = "0.7"
pretty_assertions = "0.6"

[[bench]]
name = "day07"
harness = false

[features]
part-1 = []

[workspace]