[package]
name = "advent-of-code-2019"
version = "0.1.0"
authors = ["Marcus Griep <marcus@griep.us>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
env_logger = "0.7"
intcode = { path = "./intcode" }
log = "0.4"
structopt = "*"

[dev-dependencies]
criterion = "0.3"
pretty_assertions = "0.6"

[[bench]]
name = "bench"
harness = false

[profile.bench]
codegen-units = 1
lto = true

[features]
part-1 = []

[workspace]