[package]
name = "advent-of-code-2019"
version = "0.1.0"
authors = ["Marcus Griep <marcus@griep.us>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
env_logger = "0.7"
futures = "*"
intcode = { path = "./intcode" }
itertools = "0.8"
lazy_static = "1"
log = { version = "0.4", features = [ "release_max_level_info" ] }
num-bigint = "0.2"
num-integer = "0.1"
num-traits = "0.2"
petgraph = "0.4"
regex = "1"
smallvec = "*"
structopt = "*"
termion = "*"
tokio = { version = "0.2.6", features = [ "rt-core", "sync", "time", "io-std", "stream" ] }

[dev-dependencies]
criterion = "0.3"
pretty_assertions = "0.6"

[[bench]]
name = "bench"
harness = false

[profile.release]
codegen-units = 1
lto = true

[profile.bench]
codegen-units = 1
lto = true

[features]
threaded-async = [ "tokio/rt-threaded" ]

[workspace]
