[package]
name = "intcode"
version = "0.1.0"
authors = ["Marcus Griep <marcus@griep.us>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1"
snafu = "0.6"

[dev-dependencies]
criterion = "0.3"
anyhow = "1"
pretty_assertions = "0.6"
