[package]
name = "intcode"
version = "0.1.0"
authors = ["Marcus Griep <marcus@griep.us>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrayvec = "0.5"
futures = "0.3"
log = "0.4"
num-traits = "0.2"
thiserror = "1"
tokio = { version = "0.2", features = [ "rt-core", "macros", "sync", "io-util", "stream" ] }
snafu = "0.6"
static_assertions = "1.1"

[dev-dependencies]
anyhow = "1"
criterion = "0.3"
env_logger = "0.7"
pretty_assertions = "0.6"
